<resources>
    <string name="app_name">EROMANCE</string>
    <string name="vk_redirect_uri">http://oauth.vk.com/blank.html</string>
    <string name="ok_client_id">1253895168</string>
    <string name="ok_public_key">CBANONLLEBABABABA</string>
    <string name="ok_secret_key">F2E8DA4AD60372F4875E34AA</string>
    <string name="ok_app_link">https://ok.ru/game/1253895168</string>
    <string name="spinnerCountry">Страна</string>
    <string name="spinnerCity">Город</string>
    <string name="spinnerDOfBirth">Год рождения</string>
    <string name="spinnerNick">Ник</string>
    <string name="spinnerSex">Пол</string>
    <string name="spinnerTarget">Кого вы ищите</string>
    <string name="spinnerLookFor">Цель знакомства</string>
    <string name="spinnerAppearance">Тип внешности</string>
    <string name="spinnerCar">Наличие автомобиля</string>
    <string name="golden">golden</string>
    <string name="google_maps_api_key">AIzaSyCveyB9pZ9pZ_fmcMRJkXT2EJf6NykEaiY</string>
    <string name="string_register_email">Электронная почта </string>
    <string name="string_register_login">Придумайте логин</string>
    <string name="request_key_activation">Запросить код активации</string>
    <string name="string_date_from">от</string>
    <string name="string_date_before">до</string>
    <string name="location_userprofile">Текущее Месторасположение</string>
    <string name="gifts">Подарки</string>
    <string name="interests">Интересы</string>
    <string name="myself">О себе</string>
    <string name="languages_user_profile">Языки</string>
    <string name="additionally">Дополнительно</string>
    <string name="show_reviews_user_profile">Показать отзывы</string>
    <string name="hide_user_avatar_user_profile">Чтобы просмотреть фото других, необходимо добавить свои</string>
    <string name="title_activity_momental_meets">MomentalMeetsActivity</string>
    <string name="title_activity_evenings_list">EveningsListActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_album">AddAlbumActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="facebook_app_id">1545033102213822</string>
    <string name="title_activity_user_review">UserReviewActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_page">Главная</string>
    <string name="myProfile_NAV">Профиль</string>
    <string name="searchPair_NAV">Поиск пары</string>
    <string name="momentMeets_NAV">Моментальные встречи</string>
    <string name="placesForRest_NAV">Места для отдыха</string>
    <string name="eveningPlans_NAV">Планы на вечер</string>
    <string name="map_NAV">Карты</string>
    <string name="games_NAV">Игры</string>
    <string name="twentyOne_NAV">+21</string>
    <string name="settings_NAV">Настройки</string>
    <string name="twentyOne_Requests_NAV">+21</string>
    <string name="photo_album">Фотоальбом</string>
    <string name="personal_data">Анкетные данные</string>
    <string name="guests">Гости</string>
    <string name="favorites">Избранные</string>
    <string name="notifications">Мои события</string>
    <string name="my_gifts">Подарки</string>
    <string name="messages">Сообщение</string>
    <string name="my_likes">Мои лайки</string>
    <string name="my_balance">Мои баланс</string>
    <string name="dialogs">Диалоги</string>
    <string name="profile">Профиль</string>
    <string name="reviews">Отзывы</string>
    <string name="rating">Рейтинг</string>
    <string name="coins">Монеты</string>
    <string name="coin">Монет</string>
    <string name="username">Логин</string>
    <string name="real_name">Имя</string>
    <string name="taking">Говорит &#8230;</string>
    <string name="city">Город</string>
    <string name="country">Страна</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="sign_in">Войти</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="restore_password">Восстановить пароль</string>
    <string name="remember_me">Запомнить меня</string>
    <string name="sign_in_via">Авторизоваться через</string>
    <string name="email_disclaimer">ллщощпг через</string>
    <string name="create_a_username">Придумайте логин</string>
    <string name="email">Электронная почта</string>
    <string name="phone_number">Номер телефона</string>
    <string name="recent_code_wait">Можно запросить код через: </string>
    <string name="recent_activation_code">Запросить код активации</string>
    <string name="activation_code">Код активации</string>
    <string name="next">Дальше</string>
    <string name="birth_date">Дата рождение</string>
    <string name="all_cities">Все</string>
    <string name="from_my_city">Из моего города</string>
    <string name="top_user">Топ пользователи</string>
    <string name="language">Язык</string>
    <string name="family_status">Семейное положение</string>
    <string name="kids">Дети</string>
    <string name="character">Характер</string>
    <string name="complexion">Комплекция</string>
    <string name="relation_to_smoking">Отношение к курению</string>
    <string name="relation_to_alcohol">Отношение к алкоголю</string>
    <string name="life_activity">Род деятельности</string>
    <string name="hair_color">Цвет волос</string>
    <string name="car">Машина</string>
    <string name="about_yourself">О себе</string>
    <string name="height">Рост</string>
    <string name="weight">Вес</string>
    <string name="you_was_been_added_to_favorites">Вы были добавлены в избранное</string>
    <string name="you_blocked">Вы заблокировали</string>
    <string name="you_was_been_blocked">Вы были заблокированы</string>
    <string name="you_send_gift">Вы отправили подарок</string>
    <string name="gift_was_sent_to_you">Вам отправили подарок</string>
    <string name="you_liked">Вам поравилось</string>
    <string name="you_was_been_liked">Вы поравились</string>
    <string name="game_with_cost">Игра со стоимостью: </string>
    <string name="you_win_game">Вы выиграли</string>
    <string name="you_lose_game">Вы проиграли</string>
    <string name="days_age">дней назад</string>
    <string name="month_ago">месяцов назад</string>
    <string name="year_ago">лет назад</string>
    <string name="share">Поделиться</string>
    <string name="select_image">Выберите картинку</string>
    <string name="send_gift">Отправить подарок</string>
    <string name="write_message">Написать сообщение</string>
    <string name="add_to_favorite">Добавить в избранное</string>
    <string name="remove_from_favorite">Убрать из избранных</string>
    <string name="show_reviews">Показать отзывы</string>
    <string name="show">Показать</string>
    <string name="search">Поиск</string>
    <string name="join">Присоединиться</string>
    <string name="set_marker">Отметиться</string>
    <string name="remove_marker">Убрать мою отметку</string>
    <string name="add">Добавить</string>
    <string name="ok">Ок</string>
    <string name="cancel">Отмена</string>
    <string name="create">Создать</string>
    <string name="agree">Ознакомлен</string>
    <string name="sent_request">Отправить запрос</string>
    <string name="your_review">Ваш отзыв</string>
    <string name="become_acquainted">Познакомлюсь</string>
    <string name="age">Возраст</string>
    <string name="online_users">Онлайн пользователи</string>
    <string name="average_check">Средний чек</string>
    <string name="work_hours">Часы работы</string>
    <string name="phone">Телеофон</string>
    <string name="website">Сайт</string>
    <string name="address">Адрес</string>
    <string name="driving_directions">Схема проезда</string>
    <string name="all_games">Все игры</string>
    <string name="history_of_games">История игр</string>
    <string name="how_to_play">Как играть?</string>
    <string name="opponents">Соперники</string>
    <string name="bet">Bets</string>
    <string name="date">Дата</string>
    <string name="thing">Предмет</string>
    <string name="status">Статус</string>
    <string name="status_waiting">Ожидание</string>
    <string name="win">Выигрыш</string>
    <string name="loss">Проигрыш</string>
    <string name="unknown">Не известно</string>
    <string name="overall">Всего: </string>
    <string name="choose_thing">Выберите предмет: </string>
    <string name="information">Инфо</string>
    <string name="bet_for_game">Ставка на игру</string>
    <string name="eula">NONE</string>
    <string name="want_to_get_service">Хочу получить услугу</string>
    <string name="want_to_provide_service">Хочу предоставлять услуги</string>
    <string name="service_type">Вид услуги</string>
    <string name="filter">Фильтр</string>
    <string name="men">Мужчина</string>
    <string name="woman">Женщина</string>
    <string name="search_parameters">Параметры поиска</string>
    <string name="aim_of_the_meeting">Цель встречи</string>
    <string name="place_type">Тип заведении</string>
    <string name="name_hint">Название &#8230;</string>
    <string name="can_request_key_activation">Вы можете шифровать код: </string>
    <string name="list_empty">Список пуст</string>
    <string name="empty">Пусто</string>
    <string name="gps_needed">Нужно включить GPS</string>
    <string name="success">Успешно</string>
    <string name="error">Произошла ошибка</string>
    <string name="send_to_moderation">Ваш запрос отправлен на модерацию</string>
    <string name="brief_description">Краткое описание</string>
    <string name="notification_status">Уведомления: </string>
    <string name="change_password">Изменить пароль</string>
    <string name="developer_feedback">Обратная связь с разработчиками</string>
    <string name="send_invitation">Отправить приглашение</string>
    <string name="fill_balance_introduction">Инструкця по пополнению счета</string>
    <string name="delete_account">Удалить учетную запись</string>
    <string name="exit_from_account">Выйти из аккаунта</string>
    <string name="wait">Подождите &#8230;</string>
    <string name="loading">Идет загрузка &#8230;</string>
    <string name="title_activity_more_push_info">MorePushInfoActivity</string>
    <string name="day_ago">дней назад</string>
    <string name="hours_ago">часов назад</string>
    <string name="minutes_ago">минут назад</string>
    <string name="seconds_ago">секунд назад</string>
    <string name="skating">Катаюсь</string>
    <string name="walking">Гуляю</string>
    <string name="rest">Отдыхаю</string>
    <string name="miss">Скучаю</string>
    <string name="dancing">Танцую</string>
    <string name="film">Фильм</string>
    <string name="game">Игры</string>
    <string name="languages">Языки</string>
    <string name="in_drawing">на рисунок</string>
    <string name="in_user">на пользователя</string>
    <string name="in_establishments">на заведения</string>
    <string name="complaint">Жалоба</string>
    <string name="Soon">Данная функция скоро появится</string>
    <string name="Send_To_Moderation">Ваш запрос отправлен на модерацию</string>
    <string name="Send_Data_Empty">Данные для отправки пустые</string>
    <string name="result_empty">Поиск не дал результатов</string>
    <string name="go_upload">Идет загрузка...</string>
    <string name="success_evening">Вы успешно присоединились</string>
    <string name="chat">Чат</string>
    <string name="delete_image">Вы хотите удалить эту картинку</string>
    <string name="massages">Сообщения</string>
    <string name="introduction">Познакомлюсь</string>
    <string name="type_appearance">Тип внешности</string>
    <string name="growth">Рост</string>
    <string name="search_couples">Поиск Пары</string>
</resources>