<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:id="@+id/main_item_container"
    android:background="#fff"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/vip_image_container"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/img_vip"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/place_title_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/golden"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                android:id="@+id/place_type_TV"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="bottom"
                    android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/golden"
                android:textSize="14sp" />
            </LinearLayout>
            <TextView
                android:id="@+id/place_menu_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text=""
                android:textColor="@color/background_material_b"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_contur"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="80"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp">

                    <TextView
                        android:id="@+id/average_check"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="40"
                        android:gravity="end"
                        android:text="@string/average_check"
                        android:textColor="@color/golden"
                        android:textSize="14dp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="18dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="10"
                        android:src="@drawable/ic_check" />

                    <TextView
                        android:id="@+id/average_check_TV"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:gravity="left"
                        android:text=""
                        android:textColor="#000" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp">

                    <TextView
                        android:id="@+id/opening_hour"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="40"
                        android:gravity="end"
                        android:text="@string/work_hours"
                        android:textColor="@color/golden"
                        android:textSize="14dp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="18dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="10"
                        android:src="@drawable/ic_opening_hours" />

                    <TextView
                        android:id="@+id/opening_hourTV"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:gravity="left"
                        android:text=""
                        android:textColor="#000" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="40"
                        android:gravity="end"
                        android:text="@string/phone"
                        android:textColor="@color/golden"
                        android:textSize="14dp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="18dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="10"
                        android:src="@drawable/ic_telephone" />

                    <TextView
                        android:id="@+id/telephoneTV"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:gravity="left"
                        android:text=""
                        android:textColor="#000" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="40"
                        android:gravity="end"
                        android:text="@string/website"
                        android:textColor="@color/golden"
                        android:textSize="14dp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="18dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="10"
                        android:src="@drawable/ic_site" />

                    <TextView
                        android:id="@+id/siteRecreationTV"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:gravity="left"
                        android:text=""
                        android:textColor="#000" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="40"
                        android:gravity="end"
                        android:text="@string/address"
                        android:textColor="@color/golden"
                        android:textSize="14dp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="0dp"
                        android:layout_height="18dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="10"
                        android:src="@drawable/ic_adress" />

                    <TextView
                        android:id="@+id/adressRecreationTV"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:gravity="left"
                        android:text=""
                        android:textColor="#000" />
                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/iconLL"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="20"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:id="@+id/callLayout"

                    android:orientation="vertical"
                    android:weightSum="2">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:src="@drawable/ic_call" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:weightSum="2">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:id="@+id/showPlaceOnMap_IV"
                        android:layout_weight="1"
                        android:src="@drawable/ic_adresbig" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/driving_directions"
                        android:textColor="@color/golden"
                        android:textSize="10dp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:minHeight="1px"
        android:layout_margin="5dp"
        android:background="@drawable/grad_divider"/>
</LinearLayout>

